ipc/ipdl/test/ipdl/ok/PStruct.ipdl
struct S {
    int i;
    double d;
};

[ChildProc=any]
sync protocol PStruct {
parent:
    sync test(S s) returns (S ss);
    async __delete__();
};
