ipc/ipdl/test/ipdl/error/SyncDestructor.ipdl
//error: destructor must be async

[ChildProc=any]
protocol SyncDestructor {
child:
    sync __delete__();
};
